# ul-fri-nlp-course-project-2025-2026-neznaniletecipredmet

./: .gitignore  README.md  annotate_eval.py  bootstrap_eval_questions.py  build_index.py  collect_data.py  evaluate.py  pyproject.toml  test_retrieval.py
code/: QUICKSTART.md  app.py  config.py  questions_audit_triage.md  questions_audited.json  questions_full.json  questions_full_v2.json  questions_v3.json  requirements.txt
code/scripts/: annotate_eval.py  apply_reference_audit.py  ask.py  audit_references.py  bootstrap_eval_questions.py  build_index.py  collect_data.py  compare_chunk_sizes.py  compare_embedders.py  compare_generators.py  evaluate.py  generate_questions.py  judge_answers.py  local_smoke_test.sh  manual_review.py  merge_eval_questions.py  prepare_cluster_questions.py  run_cluster_generators.sh  run_retrieval_sweep.py  sync_from_cluster.sh  sync_to_cluster.sh  test_retrieval.py
code/slurm/: ask_on_cluster.sh  build_index.sh  collect_data.sh  compare_models.sh  evaluate.sh  slurm-14860449.out
code/slurm/logs/: build_index_14872313.out  build_index_14873691.err  build_index_14874100.err  build_index_14874100.out  build_index_14874203.err  build_index_14874203.out  (+11 more)
code/src/: chunking.py  embeddings.py  eval_metrics.py  generation.py  parse_docs.py  pipeline.py  prompting.py  reranking.py  retrieval.py  utils.py  vector_store.py
code/tests/: test_evaluate_metrics.py
raw_data/: data_links.txt
raw_dataset/files/: README.md
report/: report.bib  report.tex
report_jtdh/: apacite.sty  jdth-paper.tex  jtdh.sty  pdflatex38732.fls
(+26 files in other folders)
